# endfield-factory-compressor

./: .gitignore  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  requirements.txt  setup.py  start-single.ps1  start.ps1  tsconfig.app.json  tsconfig.node.json  vite.config.ts
backend/: Models.cs  Program.cs  Z3Solver.cs  backend.csproj  pyproject.toml
backend/Hubs/: SolverHub.cs
backend/Properties/: launchSettings.json
backend/solver/: app.py  buildings.py  models.py  signalr_hub.py  solver_hub.py  z3_solver.py
docs/: before-after-comparison.md  conveyor-bridge-implementation.md  frontend-conveyor-visualization.md  refactoring-summary.md  steel-block-update.md  tile-based-sat-implementation.md
examples/: premium-buckwheat-capsule.md  steel-block-production.md  steel_line_optimized.py  steel_production_example.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
server/: package-lock.json  package.json  tsconfig.json
server/src/: index.ts  solver-session.ts  z3-context.ts
shared/models/: buildings.ts  types.ts
shared/solver/: constraints.ts  conveyor-model.ts  messages.ts  optimizer.ts  solution-extractor.ts
src/: App.tsx  README.md  index.css  main.tsx
src/core/: production-graph.ts
src/endfield_compressor/: __init__.py
src/examples/: buckwheat-capsule.ts
src/models/: recipes.ts
src/solver/: conveyor-model.test.ts  optimizer.test.ts  ws-bridge.ts
tests/: test_basic.py  test_dependency.py
(+24 files in other folders)
